# cctools-port

./: README.md
cctools/: Makefile.in  configure  configure.ac
cctools/ar/: CMakeLists.txt  ar.c  archive.c  archive.h
cctools/as/: CMakeLists.txt  Makefile.am  Makefile.in  as.c
cctools/include/: unistd.h
cctools/include/mach-o/: fat.h  loader.h
cctools/ld64/: CMakeLists.txt
cctools/ld64/src/: CMakeLists.txt
cctools/ld64/src/ld/: HeaderAndLoadCommands.hpp  InputFiles.cpp  LinkEdit.hpp  LinkEditClassic.hpp  Makefile.in  Options.cpp  Options.h  OutputFile.cpp  Resolver.cpp  Resolver.h  ld.cpp  ld.hpp
cctools/ld64/src/ld/parsers/: lto_file.cpp  macho_relocatable_file.cpp
cctools/ld64/src/ld/passes/: compact_unwind.cpp  objc.cpp
cctools/libstuff/: CMakeLists.txt  writeout.c
cctools/misc/: CMakeLists.txt  segedit.c  vtool.c
cctools/otool/: CMakeLists.txt  main.c  ofile_print.c
tools/: create_cctools_merge_patch.sh  create_ld64_merge_patch.sh
